# warre-dashboard

./: .gitreview  .stestr.conf  MANIFEST.in  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
warre_dashboard/api/: __init__.py  reservation.py
warre_dashboard/api/rest/: reservation.py
warre_dashboard/content/reservation/: forms.py  panel.py  tables.py  urls.py  views.py
warre_dashboard/content/reservation/static/css/: easy-gantt.css
warre_dashboard/content/reservation/static/js/: easy-gantt.js  nectar_reservations.js  reservation-calendar.js
warre_dashboard/content/reservation/static/scss/: nectar.scss
warre_dashboard/content/reservation/templates/reservation/: _create.html  _reservation_flavor.html  _reservation_limits.html  create.html  detail.html  index.html
warre_dashboard/enabled/: _1500_project_reservation_panel.py
warre_dashboard/local_settings.d/: _1599_reservation_settings.py
warre_dashboard/tests/: settings.py
warre_dashboard/tests/unit/: test_warre_dashboard.py
